# stillpoint

./: Manifest.in  README.md  build.sh  pyproject.toml
src/stillpoint/: agent.py  cli.py  collector_app.py  timed_access_log_middleware.py  trace_context.py
src/stillpoint/ui/: app.js  index.html  styles.css
